# py3DXRDProc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build_and_test.yml
docs/: conf.py  index.rst  modules.rst  py3DXRDProc.Indexing.rst  py3DXRDProc.rst
licenses/: ImageD11.txt  PyCIFRW.txt  h5py.txt  hdf5plugin.txt  jsmin.txt  lxml.txt  networkx.txt  numba.txt  numpy.txt  pandas.txt  pymicro.txt  scipy.txt  tables.txt  tqdm.txt  vtk.txt  xfab.txt
py3DXRDProc/: __init__.py  cluster.py  conversions.py  grain.py  grain_map.py  grain_volume.py  io_tools.py  load_step.py  parse_input_file.py  phase.py  sample.py
py3DXRDProc/Indexing/: __init__.py  bootstrap_map.py  clean_flt.py  clean_flt2.py  correct_module_distortion.py  custom_corrector.py  custom_gip_queues.py  filter_peaks.py  makemap_module.py  merge_flt_module.py  new_peaksearcher.py  old_peaksearcher.py  ps_dset_builder.py
scripts/Analysis/: deben_plotting.py  get_motor_positions.py  hdf5_import_and_track.py  import_align_clean_stitch_track_export.py  map_to_hdf5.py  ref_frame_alignment.py
scripts/Indexing/: custom_gip_local.py  index_3DXRD.py  index_one_scan_local.py
scripts/Indexing/Cluster/: index_one_scan.py
tests/: test_base_grain.py  test_base_map_grain.py  test_clean_grain.py  test_conversions.py  test_grain_functions.py  test_raw_grain.py  test_stitch_grain.py  test_track_grain.py
tests/integration_tests/: test_grain_tracking.py  test_map_import.py
tests/test_data/: test_gff_export.gff
tests/test_data/scans/: FitAllB_out.gff  Grainspotter_out.gff  test_map.map  test_map_broken_grain.map
