[tool.poetry]
name = "py3dxrdproc"
version = "0.1.0"
description = "Python 3DXRD Processing Toolkit - Diamond Light Source and University of Birmingham."
authors = ["James Ball <jadball@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "py3DXRDProc"}]
exclude = ["tests", "scripts", "data", ".pytest_cache", "build", "py3DXRDProc.egg_info", "licenses"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
scipy = "^1.11.4"
# ImageD11 = {git = "https://github.com/FABLE-3DXRD/ImageD11.git",  rev = "5030f9ca6786dd201e91e9e1612cda3b6e96e744"}
ImageD11 = "^2.0.4"
h5py = "^3.10.0"
hdf5plugin = "^4.3.0"
numba = "^0.58.1"
numpy = "<1.24"
pandas = "^2.1.3"
pymicro = "^0.5.1"
# pymicro = {git = "https://github.com/jadball/pymicro.git"}
tqdm = "^4.66.1"
xfab = "^0.0.6"
jsmin = "^3.0.1"
networkx = "^3.2.1"
PyCifRW = "^4.4.6"
vtk = "^9.2.6"
tables = "^3.9.2"
lxml = "^4.9.3"
openpyxl = "^3.1.2"
pycpd = "^2.0.0"
# charset-normalizer = "^3.1.0"  # Needed cause of a bug in poetry
urllib3 = "^2.1.0"  # Needed cause of a bug in poetry

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.1"

[tool.poetry.group.plots]
optional = true

[tool.poetry.group.plots.dependencies]
matplotlib = "^3.8.2"
jupyter = "^1.0.0"
ipympl = "^0.9.2"
ipywidgets = "^8.1.1"
mplcursors = "^0.5.2"
seaborn = "^0.12.1"
#pyzmq = "<25"
#jupyter_client = "<8"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
docutils = "^0.20.1"
sphinx-autodoc-typehints = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
